Rendering component with express server, after webpack setup

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./build/bundle.js",
+    "dev:build:server": "webpack --config webpack.server.js"
   },
   "author": "Brian De Maio",
   "license": "ISC",
